--- a/content/azure-pipelines.yml
+++ b/content/azure-pipelines.yml
@@ -14,6 +14,6 @@ steps:
   displayName: 'Deploy generated ARM template'
   inputs:
     azureSubscription: '<enter subscription name here>'
-    resourceGroupName: <enter resource group name here>
-    location: <enter location here>
-    csmFile: <enter arm file here>
+    resourceGroupName: farmer-rg
+    location: NorthEurope
+    csmFile: output.json
