--- a/content/FarmerApp.fsproj
+++ b/content/FarmerApp.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Farmer" Version="0.14.0" />
+    <PackageReference Update="FSharp.Core" Version="4.7.1" />
+    <PackageReference Include="Farmer" Version="0.16.0" />
   </ItemGroup>
 </Project>
