--- a/content/FarmerApp.fsproj
+++ b/content/FarmerApp.fsproj
@@ -8,7 +8,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.7.1" />
-    <PackageReference Include="Farmer" Version="0.16.0" />
+    <PackageReference Update="FSharp.Core" Version="4.*" />
+    <PackageReference Include="Farmer" Version="1.*" />
   </ItemGroup>
 </Project>
